# parxsread

./: .gitignore  CMakeLists.txt  README.md  adios12Nread.cpp  config.sh  loads.sh  read.cpp  readfromadios2.cpp  readfromh5.cpp
